--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,9 +1,26 @@
 :root{
-  --bg: #0e0e10;         /* fondo general */
-  --panel: #1a1a1f;      /* tarjetas */
+  --bg: #656565;         /* fondo general */
+  --panel: #1e1c1c;      /* tarjetas */
   --muted: #a3a3a3;
   --radius: 18px;
   --shadow: 0 10px 30px rgba(0,0,0,.35);
+}
+
+h1 {
+  color:rgb(218, 218, 218);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+
+}
+#fo {
+  color:rgb(255, 255, 255);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+
 }
 
 html,body,#root,.app { height: 100%; }
@@ -14,10 +31,10 @@ body { margin: 0; background: var(--bg); color: #fff; font-family: system-ui, sa
   content:"";
   position: fixed; inset: 0;
   background:
-    radial-gradient(40% 30% at 10% 10%, #2b2b34 0%, transparent 60%),
+    radial-gradient(40% 30% at 10% 10%, #030303 0%, transparent 60%),
     radial-gradient(35% 25% at 85% 20%, #22222a 0%, transparent 60%),
     radial-gradient(50% 40% at 50% 90%, #1f1f27 0%, transparent 60%),
-    linear-gradient(#0e0e10, #0e0e10);
+    linear-gradient(#000000, #0e0e10);
   z-index: -1;           /* queda detrás de todo */
   filter: blur(0.5px);
 }
@@ -43,10 +60,41 @@ body { margin: 0; background: var(--bg); color: #fff; font-family: system-ui, sa
   background: var(--panel);
   border-radius: var(--radius);
   box-shadow: var(--shadow);
-  padding: 18px;
-  border: 1px solid rgba(255,255,255,0.06);
+  padding: 18px;           /* espacio interno */
+  border: 2px solid rgb(69, 69, 69);
+  display: flex;
+  flex-direction: column;   /* coloca elementos uno debajo de otro */
+  align-items: center;      /* centra horizontalmente */
+  justify-content: center;  /* centra verticalmente (si le das altura fija) */
+  gap: 10px;                /* espacio uniforme entre elementos */            
+  border-radius: 12px;
+  background: #1a1a1a;
+  color: white;
 }
+
 .card h3{ margin: 0 0 8px; font-weight: 700; }
+.card input, .card button {
+  width: 100%;   
+  height: 100%;       
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+}
+
+.card button {  
+  text-align: center;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0);
+  color: rgb(229, 229, 229);
+  font-weight: bold;
+  transition: transform 0.2s;
+}
+
+.card button:hover {
+  transform: scale(1.05);
+}
 .muted{ color: var(--muted); }
 
 /* Grid responsivo */
@@ -57,6 +105,7 @@ body { margin: 0; background: var(--bg); color: #fff; font-family: system-ui, sa
 }
 .col-4{ grid-column: span 4; }
 .col-6{ grid-column: span 6; }
+.col-8{ grid-column: span 8; }
 .col-12{ grid-column: span 12; }
 
 @media (max-width: 900px){
