--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,12 +1,13 @@
 :root{
     /*Establecemos variables generales*/
-    --color0: rgb(87, 128, 136);         
-    --color1: rgb(116, 148, 140); 
-    --color2: rgb(207, 181, 128); 
-    --color3: rgb(134, 78, 62);     
-    --color4: rgb(202, 124, 76);  
+    --color0: #efeae4; 
+    --color1: #d9ceba;
+    --color2: #141414; 
+    --color3: #f4721e; 
+    --color4: #7a90a8;     
+    --color5: #48596b;
     --radius: 18px;
-    --shadow: 0 10px 30px rgba(46, 3, 62, 0.295);
+    --shadow: 5px 15px 20px rgba(20, 20, 20, 0.856);
 
 }
 
@@ -23,7 +24,7 @@ body{margin: 0;}
     display: grid;
     min-height: 100vh;
     margin: 0px;
-    grid-template-rows: 100px 1fr 200px;
+    grid-template-rows: 100px 1fr 150px;
     grid-template-areas:
     "header"
     "main"
@@ -32,19 +33,21 @@ body{margin: 0;}
 }
 .container header {
     grid-area: "header";
-    background: var(--color0);  
+    background: var(--color4);  
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
+    color: var(--color0);
     
     
 }
 .container main  {
     min-width: 600px;    
     grid-area: "main";    
-    padding: 20px;
-    background: var(--color1);
+    padding: 30px;
+    background: var(--color4);
+    
     justify-content:center;
     display: flex;
     flex-flow: row wrap;
@@ -61,14 +64,15 @@ body{margin: 0;}
 .container footer {
     grid-area: "footer";
     padding: 4px;
-    background: var(--color0);
+    background: var(--color5);
+    color: var(--color1);
 }
 /*----------------------------Elementos de main----------------------------*/
 /*Cards*/
-.card {
-    border: 3px solid var(--color3);
+.card {    
     /*background:linear-gradient(160deg,var(--color2),var(--color4) 90%);*/
-    background:var(--color4);
+    background:var(--color0);
+    color: var(--color2);
     border-radius: 20%;
     display: flex;
     flex-direction: column;    
@@ -77,7 +81,7 @@ body{margin: 0;}
     
     padding-top: 30px;
     text-align:center;
-    box-shadow:0 10px 20px rgba(0, 0, 0, 0.6);
+    box-shadow:var(--shadow);
 }
 .card.s4 {grid-column: span 4;}
 .card.s8 {grid-column: span 8;min-height: 300px;}
@@ -91,13 +95,11 @@ body{margin: 0;}
     aspect-ratio: 7/4;
     grid-template-columns: repeat(7, 1fr);
     gap:10px;
-    
-    
-    
 }
 .calendarButton{
-    background:var(--color2); 
-    border: 3px solid var(--color3);
+    background:var(--color1); 
+    border: 3px solid var(--color1);
+    color: var(--color2);
     border-radius: 18px;
     aspect-ratio: 1/1;
     position: relative;
@@ -107,7 +109,7 @@ body{margin: 0;}
 .calendarButton:hover{
     scale: 1.5;
     z-index: 1;
-    box-shadow:0 10px 30px rgba(0, 0, 0, 0.6);
+    box-shadow:var(--shadow);
 
 }
 
