--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -2,12 +2,12 @@
     /*Establecemos variables generales*/
     --color0: #efeae4; 
     --color1: #d9ceba;
-    --color2: #141414; 
-    --color3: #f4721e; 
+    --color2: #a78a6a; 
+    --color3: #715238;     
     --color4: #7a90a8;     
     --color5: #48596b;
     --radius: 18px;
-    --shadow: 5px 15px 20px rgba(20, 20, 20, 0.856);
+    --shadow: 5px 15px 20px rgba(24, 19, 13, 0.856);
 
 }
 
@@ -38,7 +38,7 @@ body{margin: 0;}
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
-    color: var(--color0);
+    color: var(--color1);
     
     
 }
@@ -72,7 +72,7 @@ body{margin: 0;}
 .card {    
     /*background:linear-gradient(160deg,var(--color2),var(--color4) 90%);*/
     background:var(--color0);
-    color: var(--color2);
+    color: var(--color3);
     border-radius: 20%;
     display: flex;
     flex-direction: column;    
@@ -90,7 +90,7 @@ body{margin: 0;}
 /*Calendar*/
 .CalendarGrid{
     display: grid;
-    padding: 10px 40px 40px 40px ;
+    padding: 0px 40px 40px 40px ;
     width: auto;
     aspect-ratio: 7/4;
     grid-template-columns: repeat(7, 1fr);
@@ -99,19 +99,37 @@ body{margin: 0;}
 .calendarButton{
     background:var(--color1); 
     border: 3px solid var(--color1);
-    color: var(--color2);
+    color: var(--color3);
     border-radius: 18px;
     aspect-ratio: 1/1;
     position: relative;
     padding: 0%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition:scale .8s .1s, z-index .8s;
 
+}
+.calendarButton.isToday{
+    outline: 4px solid var(--color2);
+}
+.calendarButton.otherMonth{
+    background:var(--color2);
+    border: 3px solid var(--color2); 
 }
 .calendarButton:hover{
     scale: 1.5;
-    z-index: 1;
+    z-index: 2;
     box-shadow:var(--shadow);
-
+    transition:scale .2s .1s , z-index .2s .2s;
 }
+.numberDayText{
+    position: absolute;
+    right: 2px;
+    bottom: 2px;
+    font-weight: 800;  
+    
+}
+
 
 
 /*----------------------------  ----------------------------*/
