--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,7 +7,7 @@
     --color4: #7a90a8;     
     --color5: #48596b;
     --radius: 18px;
-    --shadow: 5px 15px 20px rgba(24, 19, 13, 0.856);
+    --shadow: 5px 15px 20px rgba(13, 13, 24, 0.856);
 
 }
 
@@ -38,7 +38,7 @@ body{margin: 0;}
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
-    color: var(--color1);
+    color: var(--color0);
     
     
 }
@@ -76,10 +76,10 @@ body{margin: 0;}
     border-radius: 20%;
     display: flex;
     flex-direction: column;    
-    justify-items: center;
-    
+    justify-items: center;    
     
     padding-top: 30px;
+    padding-bottom: 20px;
     text-align:center;
     box-shadow:var(--shadow);
 }
@@ -129,10 +129,57 @@ body{margin: 0;}
     font-weight: 800;  
     
 }
+.emergingFrame{
+    position: fixed;     
+    top: 0;
+    left: 0;
+    width: 100vw;         
+    height: 100vh;       
+    background: rgba(0,0,0,0.5); 
+    display: flex;       
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;        
+}
 
 
 
-/*----------------------------  ----------------------------*/
+/*---------------------------- Elementos sueltos ----------------------------*/
+/*Listas*/
+.listas{
+    list-style: none;
+    padding-left: 0;
+}
+.listas li{
+    padding: 4px;
+}
+/*botones*/
+.minibutton {
+    background: none;
+    border:none;
+}
+.minibutton:hover {
+    scale: 1.8;
+    transition:scale .2s .1s;    
+}
+#headerButton{
+    appearance: auto;
+    font-family: Arial, Helvetica, sans-serif;    
+    font-size: 15px;
+    font-weight: bold;
+     box-sizing: border-box;
+    background: var(--color1);
+    color: var(--color3);
+    border-radius: var(--radius);
+    padding-block: 5px;
+    box-shadow: 2px 5px 10px rgba(2, 0, 33, 0.753);
+}
+#headerButton:hover {
+  scale: 1.5; 
+  transition: scale .2s .1s;  
+}
+
+
 
 
 
